[metadata]
name = pdbcs
author = Doug Hellmann
author-email = doug.hellmann@dreamhost.com
summary = pdb for setuptools console scripts
description-file = README.rst
license = Apache-2
classifier = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setuptools
    debugging
    pdb
home-page = https://github.com/dreamhost/pdbcs

[files]
scripts =
    pdbcs

[global]
setup-hooks =
    pbr.hooks.setup_hook
